@@ -1,5 +1,7 @@
 2002-08-31	Jakub Skopal	<j@kubs.cz>
 
+ * corrected too-wide terminal bug. Many thanks to David B Harris aka
+   ElectricElf for patience during debugging
  * implemented bit/bytes per second switch (thanks to Martynas Bieliauskas
    for idea)
 
@@ -34,4 +36,4 @@
 
  * initial release
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.8 2002-08-31 17:15:02 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.9 2002-08-31 18:40:00 merunka Exp $
